grammar.txt
program     → expression* EOF ;
expression  → sequence*;
sequence    → bind (“,” bind)*

bind        → assignment ("::" define | defineGroup)*
defineGroup → "(" define ("," define)* ")"

assignment  → cascade ("<-" | "<--") assignment |
              cascade

cascade     → keyword (";" messageSend)*
messageSend → IDENTIFIER | OPERATOR unary | KEYWORD operator

keyword     → operator (KEYWORD operator)*
operator    → unary (OPERATOR unary)*
unary       → primary IDENTIFIER*

primary     → NUMBER | STRING | SCHEME | IDENTIFIER |
              "return" assignment? | 
              "(" expression ")" |
              "[" object "]" |
              "#[" sequence "]" |
              "{" block "}" |
              KEYWORD operator

object      → ("|" assignment "|")? (define ("," define)?)?
block       → ("|" IDENTIFIER* "|")? expression

define      → IDENTIFIER "<-" assignment | 
              IDENTIFIER methodDef | 
              OPERATOR IDENTIFIER? methodDef |
              KEYWORD IDENTIFIER? (KEYWORD IDENTIFIER?)* methodDef


methodDef   → "{" expression "}"


KEYWORD     → IDENTIFIER? ":"
IDENTIFIER  → [_a-zA-Z][_a-zA-Z0-9]*
SCHEME      → IDENTIFIER "://" SCHEMEPATH
SCHEMEPATH  → (PATHCHAR | "{" expression "}")*
PATHCHAR    → [a-zA-Z0-9\-._~/.@?&=%:] (not "::")
STRING      → '"' STRCHAR* '"'
STRCHAR     → <any char except " { \> | "\" ESCAPE | "{" expression "}"
ESCAPE      → n | '"' | "\\" | t | "{" | "}"
OPERATOR    → ! | + | - | * | / | &&? | \|\|? | % | ~ |
